--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start":"node server/index.js",
-    "dev":"nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"set NODE=development && nodemon server/index.js",
+    "prod":"set NODE=production && nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
